cm-pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db3
  namespace: dxc-ramesh
  labels:
    cm: cm1
spec:
  containers:
  - name: c1
    image: docker.io/mysql
