cmpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: dxc-ramesh
  labels:
    cm: cm1
spec:
  containers:
  - name: c1
    image: docker.io/nginx
