vol1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - mountPath: "/data"
      name: v1
  volumes:
  - name: v1
    emptyDir: {}
