s1.yaml
apiVersion: v1
kind: Service
metadata:
  name: samosa
  namespace: ramesh
  labels:
    app: vadapav
  
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    dish: samosa
  type: LoadBalancer
