sts1.yaml
apiVersion: v1
kind: Service
metadata:
  name: s1
  labels:
    app: nginx
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: db1

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: db1
  name: db1
  
spec:
  serviceName: "s1"
  replicas: 3
  selector:
    matchLabels:
      app: db1
  
  template:
    metadata:
  
      labels:
        app: db1
    spec:
      containers:
      - image: mysql
        name: mysql
